--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
     <head>
 
+        <link rel ="stylesheet" href = "style.css"
+        
         <meta charset = "UTF-8">
 
         <title> Josue's Portfolio</title>
