--- a/index.html
+++ b/index.html
@@ -1,23 +1,1 @@
-<!DOCTYPE html>
-
-<html lang = 'en'>
-
-    <head>
-
-        <link rel ="stylesheet" href = "style.css"
-        
-        <meta charset = "UTF-8">
-
-        <title> Josue's Portfolio</title>
-
-    </head>
-
-    <body>
-        <h1> 
-            Exploring a World of Interesting Ideas
-        </h1>
-
-
-    </body>
-
-</html>
+Hello World
