--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Scrolling Shades</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <script src="script.js"></script>
+</head>
+<body>
+  <div class="container">
+    <section class="shade-section">
+      <h2>Section 1</h2>
+      <p>This is the first section.</p>
+    </section>
+
+    <section class="shade-section">
+      <h2>Section 2</h2>
+      <p>This is the second section.</p>
+    </section>
+
+    <section class="shade-section">
+      <h2>Section 3</h2>
+      <p>This is the third section.</p>
+    </section>
+
+    <section class="shade-section">
+      <h2>Section 4</h2>
+      <p>This is the fourth section.</p>
+    </section>
+
+    <section class="shade-section">
+      <h2>Section 5</h2>
+      <p>This is the fifth section.</p>
+    </section>
+
+    <section class="shade-section">
+      <h2>Section 6</h2>
+      <p>This is the sixth section.</p>
+    </section>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
+
