--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Scrolling Shades</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
-  <script src="script.js"></script>
+  <script src="website.js"></script>
 </head>
 <body>
   <div class="container">
