--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <title>Scrolling Shades</title>
   <link rel="stylesheet" type="text/css" href="./style.css">
-  <script src="website.js"></script>
 </head>
 <body>
   <div class="container">
@@ -38,6 +37,6 @@
     </section>
   </div>
 
-  <script src="website.js"></script>
+  <script src="./website.js"></script>
 </body>
 </html>
